# restaurant-pos-desktop

./: .env  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  main.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  window.json
src-tauri/config/: printer_config.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: client.ts
src/components/: CartSummary.tsx  CategoryBar.tsx  ExtraModal.tsx  ManualPriceModal.tsx  NumericPadModal.tsx  ProductCard.tsx  SidebarMenu.tsx  Toast.tsx
src/components/layouts/: CrudHeader.tsx  Navbar.tsx
src/components/modals/: ConfirmModal.tsx  EditCategoryModal.tsx  EditProductModal.tsx
src/components/tables/: CategoryTable.tsx  ProductTable.tsx
src/hooks/: useAutoUpdate.ts
src/layouts/: MainLayout.tsx
src/store/: authStore.ts  cartStore.ts  categoryStore.ts  productStore.ts
src/utils/: printFiscalReceipt.ts  printReceipt.ts
src/views/: CheckoutView.tsx  HomeView.tsx  LoginView.tsx
src/views/admin/: AdminPanel.tsx  CategoryAdmin.tsx  PrinterSettings.tsx  ProductsAdmin.tsx
src/views/admin/hooks/: useAdminToast.ts  useCategoryActions.ts  useModalManager.ts
