[package]
name = "gestionale-a-villetta"
version = "0.3.0"
description = "Gestionale - A Villetta"
authors = ["Nicola Mazzaferro"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

chrono = "0.4.42"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
ureq = "2"
tauri = { version = "2.8.5", features = [] }

# plugin "app" ancora alpha
tauri-plugin-app = "2.0.0-alpha.2"

# plugin già stabili
tauri-plugin-os = "2.3.1"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-updater = "2.9.0"

